k8s-1/service-discovery/deployment-alpaca-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpaca-prod
  labels:
    ver: "1"
    app: alpaca
    env: prod 
spec:
  selector:
    matchLabels:
      ver: "1"
      app: alpaca
      env: prod     
  replicas: 2
  template:
    metadata:
      labels:
        ver: "1"
        app: alpaca
        env: prod     
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports: 
        - containerPort: 8080
