k8s-1/service-discovery/alpaca-prod-service-clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpaca-prod
spec:
  selector:
    app: alpaca
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
