k8s-1/service-discovery/alpaca-prod-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpaca-prod-lb
spec:
  selector:
    app: alpaca
  ports:
    - port: 8080
      targetPort: 8080
  type: LoadBalancer
