k8s-1/service-discovery/alpaca-prod-service-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: alpaca-prod-np
spec:
  type: NodePort
  selector:
    app: alpaca
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 8080
      targetPort: 8080
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 30007
